--- a/dealhunter/templates/dealhunter/cards.html
+++ b/dealhunter/templates/dealhunter/cards.html
@@ -3,20 +3,25 @@
         <div class="d-flex justify-content-center row mt-3">
         <div class="col-md-10">
             <div class="row p-2 bg-white border rounded">
-                <div class="col-md-3 mt-1"><img class="img-fluid img-responsive rounded product-image" src="https://www.youtube.com/"></div>
+                <div class="col-md-3 mt-1"><img class="img-fluid img-responsive rounded product-image" src="{{deal.image_link}}"></div>
                 <div class="col-md-6 mt-1">
-                    <h5>{{deal.heading}}</h5>
+                    <a href="{% url 'dealview' deal.id %}"><h5>{{deal.heading}}</h5></a>
                     <div class="d-flex flex-row">
-                        <span>{{deal.category}}</span>
+                        <span style="margin-bottom: 10px;">{{deal.category}}</span>
                     </div>
-                    <p class="text-justify text-truncate para mb-0">{{deal.description}}<br><br></p>
+                    <p class="text">{{deal.description}}<br><br></p>
                 </div>
                 <div class="align-items-center align-content-center col-md-3 border-left mt-1">
                     <div class="d-flex flex-row align-items-center">
                         <h4 class="mr-1">+ / -</h4>
                     </div>
-                    <div class="d-flex flex-column mt-5"><button class="btn btn-primary btn-sm" type="button">To Deal</button><button class="btn btn-outline-primary btn-sm mt-2" type="button">Add to watchlist</button></div>
-                    <div class="d-flex flex-column mt-1"><p>{{deal.creator}}</p></div>
+                    <div class="d-flex flex-column mt-3 ml-">
+                        <a href="{{deal.url}}"><button class="btn btn-primary btn-sm" type="button">To Deal</button></a>
+                    </div>
+                    <div>
+                        <button class="btn btn-outline-primary btn-sm mt-2" type="button">Add to watchlist</button>
+                    </div>
+                    <div class="d-flex flex-column mt-1"><p>Created by: {{deal.creator}}</p></div>
                 </div>
             </div>
         </div>
