--- a/dealhunter/templates/dealhunter/newdeal.html
+++ b/dealhunter/templates/dealhunter/newdeal.html
@@ -14,6 +14,10 @@
                             <label class="form-control-label px-3">Deal Link <span class="text-danger"> *</span></label>
                             <input type="url" id="deal_url" name="deal_url" required=True placeholder="Link to the Page" onblur="validate(1)">
                         </div>
+                        <div class="form-group col-sm-12 flex-column d-flex">
+                            <label class="form-control-label px-3">Link to img (will be displayed in your deal)</label>
+                            <input type="url" id="img_url" name="img_url" required=True placeholder="not necessarily" onblur="validate(1)">
+                        </div>
                     </div>
                     <div class="row justify-content-between text-left">
                         <div class="form-group col-sm-12 flex-column d-flex">
